Bug 131150 - EDITING: Some align options are disabled in textboxes
Summary: EDITING: Some align options are disabled in textboxes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.3.0 target:7.2.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-03-05 11:20 UTC by Xisco Faulí
Modified: 2021-12-06 13:28 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-03-05 11:20:08 UTC
Steps to reproduce:
1. Open Writer
2. Insert a textbox
3. Write some text
4. Go to Format - Align

-> Center, right and justified are greyed out

Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: c57d6d39c80844c9d4c6bfed85cc151e52a67b34
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-03-05 11:21:40 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=86cb2a1f98c0585d2121e6ae34fe62f072ef9a63

author	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2019-07-12 10:37:41 +0200
committer	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2019-07-15 08:53:22 +0200
commit 86cb2a1f98c0585d2121e6ae34fe62f072ef9a63 (patch)
tree 0942e25c030c99bf7d2efd2542b40483a2e348ef
parent 349c525fd30121ad2148f6061d155815b8c83303 (diff)
tdf#112543 Add Edit/Remove hyperlink to text boxes/shapes in Writer

Bisected with: bibisect-linux64-6.4

Adding Cc: to Samuel Mehrbrodt
Comment 2 Justin L 2021-11-23 09:02:20 UTC
Proposed fix at http://gerrit.libreoffice.org/c/core/+/125688

This also affected Format -> Text -> Halfwidth/fullwidth/Hirigana/Katakana.
Comment 3 Commit Notification 2021-11-23 10:28:14 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/87fafdb9dc045735e235cbba2ef37198043422c7

tdf#131150 sw menu: use nSlotId=0 to avoid adding to set

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2021-11-24 02:04:31 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/cad293c26215855578eb218d7154ec8300960969

tdf#131150 sw menu: use nSlotId=0 to avoid adding to set

It will be available in 7.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Christian Lohmaier 2021-12-06 13:28:48 UTC
7.2.4 was a hotfix release, updating target in status-whiteboard